--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ build
 # @TODO: Remove this once icons.scss are output to a build or dist folder
 icons/scss
 .pnpm-store/
+storybook-static
 
 # Logs
 *.log
